#918 Use the factories in core, CLI and Avro test fixtures
Schema fixtures are where the constructor's null runs are densest and where a
transposed argument is hardest to spot, since a malformed fixture fails inside
the code under test rather than at the fixture. AvroSchemaConverterTest alone
carried dozens of such calls.

Fixtures that deliberately build metadata the factories do not cover keep the
constructor: legacy ConvertedType annotations, and the combinations of legacy
and modern annotations that the converter tests exist to reject. Making those
build through a factory would hide the very shape under test.

AvroSchemaConverterTest keeps a local convertedPrimitive helper for the same
reason - a converted type is a raw-metadata concern the public factories
intentionally leave out - while its group and annotatedGroup helpers go, having
become thin wrappers over the factories.